test_suite/tests/ui/type-attribute/from.stderr
error: failed to parse type: from = "Option<T"
 --> $DIR/from.rs:5:16
  |
5 | #[serde(from = "Option<T")]
  |                ^^^^^^^^^^

error: aborting due to previous error

